--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": ">=5.6.4",
         "arcanedev/log-viewer": "~4.0",
         "arcanedev/no-captcha": "~3.0",
+        "barryvdh/laravel-ide-helper": "^2.3",
         "creativeorange/gravatar": "~1.0",
         "davejamesmiller/laravel-breadcrumbs": "^3.0",
         "hieu-le/active": "~3.0",
